--- a/video_code/control_structures.ipynb
+++ b/video_code/control_structures.ipynb
@@ -214,7 +214,7 @@
    "id": "dd6f311c",
    "metadata": {},
    "source": [
-    "## if-elif-else"
+    "### if-elif-else"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "id": "3662feef",
    "metadata": {},
    "source": [
-    "## nested if statements"
+    "### nested if statements"
    ]
   },
   {
@@ -281,21 +281,20 @@
    "id": "cbf0e126",
    "metadata": {},
    "source": [
-    "## one line if-statement"
+    "### one line if-statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ca78095e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: expecting '=', or '!', or ':', or '}' (1925269603.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mif \"o\" in name.lower() : print(f\"{name.} contains the letter 'o'\")\u001b[39m\n                                          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m f-string: expecting '=', or '!', or ':', or '}'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olivia contains the letter 'o'\n"
      ]
     }
    ],
@@ -305,7 +304,7 @@
     "age = 7 \n",
     "\n",
     "# one line if\n",
-    "if \"o\" in name.lower() : print(f\"{name.} contains the letter o\") "
+    "if \"o\" in name.lower() : print(f\"{name} contains the letter 'o'\") "
    ]
   },
   {
@@ -313,7 +312,220 @@
    "execution_count": null,
    "id": "6642e6f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olivia contains the letter 'o'\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Olivia\"\n",
+    "gender = \"female\"\n",
+    "age = 7 \n",
+    "\n",
+    "# This is what it should look like\n",
+    "if \"o\" in name.lower() : \n",
+    "    print(f\"{name} contains the letter 'o'\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d70a8e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi ms Olivia\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Hi mr{name}\") if gender == \"male\" else print(f\"Hi ms {name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f3cb4de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = 5\n",
+    "# One line if-else varible assignment \n",
+    "is_child = True if age < 18 else False\n",
+    "is_child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7346f98",
+   "metadata": {},
+   "source": [
+    "## While statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4fa0ab15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 0\n",
+      "Hello 1\n",
+      "Hello 2\n",
+      "Hello 3\n",
+      "Hello 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0 \n",
+    "while n < 5:\n",
+    "    print(f\"Hello {n}\")\n",
+    "    n += 1 # n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b97019",
+   "metadata": {},
+   "source": [
+    "### Example - oil leakage\n",
+    "\n",
+    "There is an oil leakage causing the bird population in an island to 1/2 in each year. From start there were 80000 birds, how many years does it take for it to have 1/10 remaining? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "25b27c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 0 there were 80000 birds\n",
+      "Year 1 there were 40000 birds\n",
+      "Year 2 there were 20000 birds\n",
+      "Year 3 there were 10000 birds\n",
+      "It takes 4 years for the birds to have 1/10th of the population\n"
+     ]
+    }
+   ],
+   "source": [
+    "birds = 80_000\n",
+    "year = 0 \n",
+    "\n",
+    "while birds > 8000: \n",
+    "    print(f\"Year {year} there were {birds:.0f} birds\")\n",
+    "    birds /= 2\n",
+    "    year += 1\n",
+    "\n",
+    "print(f\"It takes {year} years for the birds to have 1/10th of the population\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fb63c8d",
+   "metadata": {},
+   "source": [
+    "### break statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ae74953a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "\n",
+    "rnd.randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7272c556",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrong, the answer was 45\n",
+      "have a nice day\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "\n",
+    "while True:\n",
+    "    number1 = rnd.randint(1,10)\n",
+    "    number2 = rnd.randint(1,10)\n",
+    "\n",
+    "    user_answer = int(input(f\"What is{number1}*{number2}\"))\n",
+    "\n",
+    "    if user_answer ==number1*number2:\n",
+    "        print(\"correct\")\n",
+    "    else: \n",
+    "        print(f\"wrong, the answer was {number1*number2}\")\n",
+    "\n",
+    "    play_again = input(\"Wanna play again (y or yes)?\")\n",
+    "\n",
+    "    if play_again != \"y\":\n",
+    "        print(\"have a nice day\")\n",
+    "        break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f97b4775",
+   "metadata": {},
+   "source": [
+    "## for statements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d88a09",
+   "metadata": {},
    "source": []
   }
  ],
