06_sequenses and for-loops

--- a/video_code/05_control_structures/05_control_structures.ipynb
+++ b/video_code/05_control_structures/05_control_structures.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "76359baf",
    "metadata": {},
    "outputs": [
@@ -114,12 +114,37 @@
     }
    ],
    "source": [
-    "# 5%2 = 1, 4%2 = 0. You are left with the remainder. \n",
+    "# 5%2 = 1, 4%2 = 0. You are left with the remainder of a division. \n",
     "number = 5 \n",
     "if number % 2 == 0: \n",
     "    print(\"Even number\")\n",
     "else: \n",
     "    print(\"Odd number\") \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "033a5a94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is an odd number and the value assigned to this is 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5%2 = 1, 4%2 = 0. You are left with the remainder of a division. \n",
+    "number = 5 \n",
+    "if number % 2 == 0: \n",
+    "    print(f\"It is an even number and the value assigned to this is {number}\")\n",
+    "else: \n",
+    "    print(f\"It is an odd number and the value assigned to this is {number}\") \n",
+    "\n",
+    "# Use f-string to be able to answer the inupt with a full comment\n"
    ]
   },
   {
@@ -219,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b9e5098f",
    "metadata": {},
    "outputs": [
@@ -232,6 +257,7 @@
     }
    ],
    "source": [
+    "# Elif is used when there are more then one scenario.\n",
     "weight = 12 \n",
     "\n",
     "if weight < 20:\n",
@@ -277,6 +303,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9d34ede3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is divisable by 5. Check also if it is divisable by 2.\n",
+      "This is an even number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if a number. is divisable by 5, further check if it is also divisable by 2 (even number)\n",
+    "\n",
+    "number = 100\n",
+    "\n",
+    "if number % 5 == 0:\n",
+    "    print(\"This is divisable by 5. Check also if it is divisable by 2.\")\n",
+    "    if number % 2 == 0:\n",
+    "        print(\"This is an even number.\")\n",
+    "    else: \n",
+    "        print(\"This is an odd. number.\")\n",
+    "\n",
+    "else: \n",
+    "    print(\"This number is not divisable by 5, no need for further checking.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cbf0e126",
    "metadata": {},
@@ -286,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "ca78095e",
    "metadata": {},
    "outputs": [
@@ -299,6 +356,9 @@
     }
    ],
    "source": [
+    "#You only use obeline when refractoring your original if statement with multiple lines of code.\n",
+    "#You need to think about if a one line if statement can make your code better, is it cleaner \n",
+    "#and more relatable\n",
     "name = \"Olivia\"\n",
     "gender = \"female\"\n",
     "age = 7 \n",
@@ -371,6 +431,57 @@
     "# One line if-else varible assignment \n",
     "is_child = True if age < 18 else False\n",
     "is_child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86b9c1d7",
+   "metadata": {},
+   "source": [
+    "#### Group exercise \n",
+    "\n",
+    "Decide discounts for a customer \n",
+    "\n",
+    "- set a base price to be 10kr per apple \n",
+    "- Ask for user to input wheter student or pensioner\n",
+    "- Ask for user to input the quantity of apple they buy\n",
+    "- Use if-statement to decide the final price with this discount:\n",
+    "    30 % off for student \n",
+    "    50 % off for pensioner \n",
+    "- Print out a text with f-string, telling the user what the final price is. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "febe3059",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final price for 100 apples is 700.0kr.\n"
+     ]
+    }
+   ],
+   "source": [
+    "apple = 10\n",
+    "\n",
+    "customer = input(\"Are you student or pensioner or neither?\")\n",
+    "\n",
+    "quantity = int(input(\"How manny apples do you want?\"))\n",
+    "\n",
+    "total_price = apple * quantity\n",
+    "\n",
+    "if customer == \"student\":\n",
+    "    final_price = total_price * 0.70\n",
+    "elif customer == \"pensioner\":\n",
+    "    final_price = total_price * 0.50\n",
+    "else:\n",
+    "    final_price = total_price\n",
+    "\n",
+    "print(f\"The final price for {quantity} apples is {final_price}kr.\")\n"
    ]
   },
   {
@@ -523,9 +634,161 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "d1d88a09",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a simple example \n",
+    "for i in range (5): # range(5) returns number from 0 till 4 (n-1)\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f8a9edca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random as rnd \n",
+    "\n",
+    "# Generate a random dice roll outcome\n",
+    "\n",
+    "dice_result = rnd.randint(1, 6)\n",
+    "dice_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac95f4fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love to eat apple\n",
+      "I love to eat orange\n",
+      "I love to eat grape\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list is a collection of items/values\n",
+    "\n",
+    "fruits = [\"apple\", \"orange\", \"grape\"] #if you dont have \"\" on every word it will not be 3 separate answers.\n",
+    "\n",
+    "for fruit in fruits: #fruits refer to a specifi list, fruit is an intermediate veriable\n",
+    "    print(f\"I love to eat {fruit}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94a985bb",
+   "metadata": {},
+   "source": [
+    "### example of pyhonic code\n",
+    "\n",
+    "* a classic example when writing a for loop with index\n",
+    "* problem solve: oop through the fruits list and also print out the index for each loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "38ac1191",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. apple\n",
+      "2. orange\n",
+      "3. grape\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with enumerate\n",
+    "fruits = [\"apple\", \"orange\", \"grape\"]\n",
+    "\n",
+    "for i, fruit in enumerate(fruits,1):\n",
+    "    print(f\"{i}. {fruit}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4845904",
+   "metadata": {},
+   "source": [
+    "# Un-pythonic code\n",
+    "* Rewrite the code without enumenate \n",
+    "* Tips: initiate index = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c42dae91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorit fruits are: \n",
+      "1. apple\n",
+      "2. orange\n",
+      "3. grape\n",
+      "4. strawberrry\n"
+     ]
+    }
+   ],
+   "source": [
+    "# whitout enumerate\n",
+    "fruits = [\"apple\", \"orange\", \"grape\", \"strawberrry\"]\n",
+    "\n",
+    "print(\"My favorit fruits are: \")\n",
+    "\n",
+    "index = 1 \n",
+    "for fruit in fruits:\n",
+    "    print(f\"{index}. {fruit}\")\n",
+    "    index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22505f67",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
