exercise 3 and rearranged

--- a/video_code/06_sequnenses/a)_structures.ipynb
+++ b/video_code/06_sequnenses/a)_structures.ipynb
@@ -2,50 +2,50 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bddad9d",
+   "id": "72e2fcbf",
    "metadata": {},
    "source": [
     "# Sequenses\n",
     "- one of the collection data type/iterables\n",
-    "- used for storing multiple items in a veriable \n",
-    "- for collection data types, we will be learning \n",
-    "    - charateristics \n",
-    "    - available operation  "
+    "- used for storing multiple items in a veriable\n",
+    "- for collection data types, we will be learning\n",
+    "    - charateristics\n",
+    "    - available operation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "173b2c91",
+   "id": "7179a7d9",
    "metadata": {},
    "source": [
-    "#### create a list "
+    "##### Create a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0d241d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv_shows = [\"Antikrundan\", \"Mästerkockarna\", \"Aktuellt\", \"Talang\"] #each item is a string (str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "355f3780",
+   "metadata": {},
+   "source": [
+    "##### Access an item (indexing)\n",
+    "- index begins with 0\n",
+    "- use [] to access an iterm with a certain index\n",
+    "- by default, the first item begins from the left"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ceea77b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tv_shows = [\"Antikrundan\", \"Mästerkockarna\", \"Aktuellt\", \"Talang\"] #each item is a string (str)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15cc4446",
-   "metadata": {},
-   "source": [
-    "##### Access an item (Indaxing)\n",
-    "- index begins with 0 \n",
-    "- use [] ot access an item with a certain index \n",
-    "- index starts from left by default, but you can start from the right"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "63d17488",
+   "id": "a32a5370",
    "metadata": {},
    "outputs": [
     {
@@ -54,43 +54,43 @@
        "'Mästerkockarna'"
       ]
      },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to access the second item\n",
+    "tv_shows[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "77143c0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Talang'"
+      ]
+     },
      "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# To access the secon item \n",
-    "tv_shows[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "18e820dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Talang'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# how to access index from the right \n",
-    "last_index = len(tv_shows) -1\n",
+    "# to access the last item - by counting from the left\n",
+    "last_index = len(tv_shows) - 1\n",
     "tv_shows[last_index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "42e869e5",
+   "execution_count": 4,
+   "id": "55df37ac",
    "metadata": {},
    "outputs": [
     {
@@ -99,20 +99,28 @@
        "'Talang'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# to access the last item - by counting from the right \n",
+    "# to access the last item - by counting from the right\n",
     "tv_shows[-1]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d300aeb0",
+   "metadata": {},
+   "source": [
+    "##### Iterate through a list"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9a26bace",
+   "execution_count": 5,
+   "id": "88d9d047",
    "metadata": {},
    "outputs": [
     {
@@ -127,22 +135,22 @@
     }
    ],
    "source": [
-    "for tv_show in tv_shows: # tv_show is a variable created while runnint the for loop\n",
+    "for tv_show in tv_shows: # tv_show is an intermediate variable created when running the for loop\n",
     "    print(tv_show)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bfb3cde4",
+   "id": "155caf6b",
    "metadata": {},
    "source": [
-    "#### How to change the value of a list item"
+    "##### Change the value of a list item"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4c80cc71",
+   "execution_count": 6,
+   "id": "be055e1e",
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +159,13 @@
        "['Vetenskapens värld', 'Mästerkockarna', 'Aktuellt', 'Talang']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Assign a new valuw to the first item in the list\n",
+    "# assign a new value to the first item in the list\n",
     "tv_shows[0] = \"Vetenskapens värld\"\n",
     "\n",
     "tv_shows"
@@ -165,17 +173,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ab0b0b",
+   "id": "5c48d05e",
    "metadata": {},
    "source": [
-    "##### How to append a new value to a list\n",
-    "- add a new item as the last item of the list"
+    "##### Append new value to a list\n",
+    "- add a new item as the last item"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "06ef9131",
+   "execution_count": 7,
+   "id": "1891cd22",
    "metadata": {},
    "outputs": [
     {
@@ -184,31 +192,31 @@
        "['Vetenskapens värld', 'Mästerkockarna', 'Aktuellt', 'Talang', 'Pokemon']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# tv_shows is a list , therefore, we can use a method called append()\n",
-    "tv_shows.append(\"Pokemon\") \n",
+    "# tv_shows is a list, therefore, it can use a method called append()\n",
+    "tv_shows.append(\"Pokemon\")\n",
     "\n",
     "tv_shows"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b97c266f",
+   "id": "51730ade",
    "metadata": {},
    "source": [
-    "##### Access multiple items slicing \n",
-    "- makes use of slicing operator: \n"
+    "##### Access multiple items (Slicing)\n",
+    "- make use of slicing operator :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "86ce29d6",
+   "execution_count": 8,
+   "id": "d4e7bfd7",
    "metadata": {},
    "outputs": [
     {
@@ -217,21 +225,29 @@
        "['Vetenskapens värld', 'Mästerkockarna']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# closing boundery on the left and opening boundery on the right \n",
-    "# From the item with index 0 including up to item with index (2-1)\n",
+    "# closing boundary on the left and opening boundary on the right\n",
+    "# from the item with index 0 inclusive up to item with index (2-1)\n",
     "tv_shows[0:2]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0eea9e28",
+   "metadata": {},
+   "source": [
+    "##### Sort a list"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "edf4305b",
+   "execution_count": 9,
+   "id": "14c8856a",
    "metadata": {},
    "outputs": [
     {
@@ -240,21 +256,21 @@
        "['Aktuellt', 'Mästerkockarna', 'Pokemon', 'Talang', 'Vetenskapens värld']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tv_shows.sort() # by default, the lsit is sorted alphabeticly or numerically this is called acending\n",
+    "tv_shows.sort() # by default, the list will be sorted by ascending order (either alphabetically or numerically)\n",
     "\n",
     "tv_shows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "08385e5a",
+   "execution_count": 14,
+   "id": "225dc094",
    "metadata": {},
    "outputs": [
     {
@@ -263,13 +279,13 @@
        "['Vetenskapens värld', 'Talang', 'Pokemon', 'Mästerkockarna', 'Aktuellt']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# sort by cending order\n",
+    "# sort by descending order \n",
     "tv_shows.sort(reverse=True)\n",
     "\n",
     "tv_shows"
@@ -277,8 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "256adaad",
+   "execution_count": 11,
+   "id": "22bee244",
    "metadata": {},
    "outputs": [
     {
@@ -287,29 +303,29 @@
        "'Vetenskapens värld'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Note that with sorting, index of items will be changed accordingly \n",
+    "# note that with the sorting, index of items will be changed accordingly\n",
     "tv_shows[0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ea91b8e8",
+   "id": "3c17d417",
    "metadata": {},
    "source": [
-    "##### Create a list by list comprehension \n",
-    "- Clean code to create list when creating a list from anoteher iterable"
+    "##### Create a list by list comprehension\n",
+    "- clean code to create list when creating a list from another iterable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2cc455c8",
+   "execution_count": 13,
+   "id": "a70fd892",
    "metadata": {},
    "outputs": [
     {
@@ -318,14 +334,14 @@
        "[1, 8, 27, 64, 125, 216, 343, 512, 729]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The value for each item in the list cubes are actually a calculation in a existing iterable (i.e range())\n",
-    "cubes = [x**3 for x in range(1,10)]   \n",
+    "# the value for each item in the list cubes is actually a calculation from items in an existing iterable (i.e. range())\n",
+    "cubes = [x**3 for x in range(1, 10)]\n",
     "\n",
     "cubes"
    ]
