--- a/video_code/05_control_structures/a)_if.ipynb
+++ b/video_code/05_control_structures/a)_if.ipynb
@@ -2,15 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81f4769a",
-   "metadata": {},
-   "source": [
-    "# Control structures"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2d4858f",
+   "id": "0c358897",
    "metadata": {},
    "source": [
     "## If-statments"
@@ -18,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8545c4ec",
+   "execution_count": null,
+   "id": "98cbe746",
    "metadata": {},
    "outputs": [
     {
@@ -45,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f35e568a",
+   "execution_count": null,
+   "id": "58232029",
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3a5a48d0",
+   "execution_count": null,
+   "id": "2b8e9250",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9722bd",
+   "id": "bad08546",
    "metadata": {},
    "source": [
     "### moduluo operator"
@@ -102,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76359baf",
+   "id": "381576fa",
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "033a5a94",
+   "execution_count": null,
+   "id": "033fd584",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3a1e6103",
+   "execution_count": null,
+   "id": "c9a6b8d9",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce1ba5dd",
+   "id": "bb1fa1ea",
    "metadata": {},
    "outputs": [
     {
@@ -194,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fe66aa53",
+   "execution_count": null,
+   "id": "a2ef1103",
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d84b2934",
+   "execution_count": null,
+   "id": "f09a0f44",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6f311c",
+   "id": "79d63ec9",
    "metadata": {},
    "source": [
     "### if-elif-else"
@@ -244,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b9e5098f",
+   "execution_count": null,
+   "id": "4fe25b80",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3662feef",
+   "id": "c5a085c7",
    "metadata": {},
    "source": [
     "### nested if statements"
@@ -279,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "f5203696",
+   "execution_count": null,
+   "id": "450b310a",
    "metadata": {},
    "outputs": [
     {
@@ -304,8 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9d34ede3",
+   "execution_count": null,
+   "id": "c5fc7f3b",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbf0e126",
+   "id": "836b409a",
    "metadata": {},
    "source": [
     "### one line if-statement"
@@ -343,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ca78095e",
+   "execution_count": null,
+   "id": "c37e964e",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6642e6f3",
+   "id": "28158ca8",
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "d70a8e40",
+   "execution_count": null,
+   "id": "3f61ba4b",
    "metadata": {},
    "outputs": [
     {
@@ -411,8 +403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f3cb4de9",
+   "execution_count": null,
+   "id": "8a64aba5",
    "metadata": {},
    "outputs": [
     {
@@ -421,9 +413,8 @@
        "True"
       ]
      },
-     "execution_count": 34,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -435,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b9c1d7",
+   "id": "1a95893d",
    "metadata": {},
    "source": [
     "#### Group exercise \n",
@@ -453,8 +444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "febe3059",
+   "execution_count": null,
+   "id": "5c2589cc",
    "metadata": {},
    "outputs": [
     {
@@ -483,323 +474,16 @@
     "\n",
     "print(f\"The final price for {quantity} apples is {final_price}kr.\")\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7346f98",
-   "metadata": {},
-   "source": [
-    "## While statements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "4fa0ab15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello 0\n",
-      "Hello 1\n",
-      "Hello 2\n",
-      "Hello 3\n",
-      "Hello 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 0 \n",
-    "while n < 5:\n",
-    "    print(f\"Hello {n}\")\n",
-    "    n += 1 # n = n + 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6b97019",
-   "metadata": {},
-   "source": [
-    "### Example - oil leakage\n",
-    "\n",
-    "There is an oil leakage causing the bird population in an island to 1/2 in each year. From start there were 80000 birds, how many years does it take for it to have 1/10 remaining? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "25b27c13",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Year 0 there were 80000 birds\n",
-      "Year 1 there were 40000 birds\n",
-      "Year 2 there were 20000 birds\n",
-      "Year 3 there were 10000 birds\n",
-      "It takes 4 years for the birds to have 1/10th of the population\n"
-     ]
-    }
-   ],
-   "source": [
-    "birds = 80_000\n",
-    "year = 0 \n",
-    "\n",
-    "while birds > 8000: \n",
-    "    print(f\"Year {year} there were {birds:.0f} birds\")\n",
-    "    birds /= 2\n",
-    "    year += 1\n",
-    "\n",
-    "print(f\"It takes {year} years for the birds to have 1/10th of the population\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fb63c8d",
-   "metadata": {},
-   "source": [
-    "### break statement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "ae74953a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import random as rnd\n",
-    "\n",
-    "rnd.randint(1,10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "7272c556",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wrong, the answer was 45\n",
-      "have a nice day\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random as rnd\n",
-    "\n",
-    "while True:\n",
-    "    number1 = rnd.randint(1,10)\n",
-    "    number2 = rnd.randint(1,10)\n",
-    "\n",
-    "    user_answer = int(input(f\"What is{number1}*{number2}\"))\n",
-    "\n",
-    "    if user_answer ==number1*number2:\n",
-    "        print(\"correct\")\n",
-    "    else: \n",
-    "        print(f\"wrong, the answer was {number1*number2}\")\n",
-    "\n",
-    "    play_again = input(\"Wanna play again (y or yes)?\")\n",
-    "\n",
-    "    if play_again != \"y\":\n",
-    "        print(\"have a nice day\")\n",
-    "        break\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f97b4775",
-   "metadata": {},
-   "source": [
-    "## for statements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "d1d88a09",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a simple example \n",
-    "for i in range (5): # range(5) returns number from 0 till 4 (n-1)\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "f8a9edca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import random as rnd \n",
-    "\n",
-    "# Generate a random dice roll outcome\n",
-    "\n",
-    "dice_result = rnd.randint(1, 6)\n",
-    "dice_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "ac95f4fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I love to eat apple\n",
-      "I love to eat orange\n",
-      "I love to eat grape\n"
-     ]
-    }
-   ],
-   "source": [
-    "#list is a collection of items/values\n",
-    "\n",
-    "fruits = [\"apple\", \"orange\", \"grape\"] #if you dont have \"\" on every word it will not be 3 separate answers.\n",
-    "\n",
-    "for fruit in fruits: #fruits refer to a specifi list, fruit is an intermediate veriable\n",
-    "    print(f\"I love to eat {fruit}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "94a985bb",
-   "metadata": {},
-   "source": [
-    "### example of pyhonic code\n",
-    "\n",
-    "* a classic example when writing a for loop with index\n",
-    "* problem solve: oop through the fruits list and also print out the index for each loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "38ac1191",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. apple\n",
-      "2. orange\n",
-      "3. grape\n"
-     ]
-    }
-   ],
-   "source": [
-    "# with enumerate\n",
-    "fruits = [\"apple\", \"orange\", \"grape\"]\n",
-    "\n",
-    "for i, fruit in enumerate(fruits,1):\n",
-    "    print(f\"{i}. {fruit}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4845904",
-   "metadata": {},
-   "source": [
-    "# Un-pythonic code\n",
-    "* Rewrite the code without enumenate \n",
-    "* Tips: initiate index = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "c42dae91",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My favorit fruits are: \n",
-      "1. apple\n",
-      "2. orange\n",
-      "3. grape\n",
-      "4. strawberrry\n"
-     ]
-    }
-   ],
-   "source": [
-    "# whitout enumerate\n",
-    "fruits = [\"apple\", \"orange\", \"grape\", \"strawberrry\"]\n",
-    "\n",
-    "print(\"My favorit fruits are: \")\n",
-    "\n",
-    "index = 1 \n",
-    "for fruit in fruits:\n",
-    "    print(f\"{index}. {fruit}\")\n",
-    "    index += 1"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Github",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.12.10"
   }
  },
