--- a/Exercise/exercise_3.ipynb
+++ b/Exercise/exercise_3.ipynb
@@ -508,12 +508,127 @@
    "cell_type": "markdown",
    "id": "2e1b5524",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 3. Chessboard using list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "3046ca30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A1', 'B1', 'C1', 'D1', 'E1', 'F1', 'G1', 'H1']\n",
+      "['A2', 'B2', 'C2', 'D2', 'E2', 'F2', 'G2', 'H2']\n",
+      "['A3', 'B3', 'C3', 'D3', 'E3', 'F3', 'G3', 'H3']\n",
+      "['A4', 'B4', 'C4', 'D4', 'E4', 'F4', 'G4', 'H4']\n",
+      "['A5', 'B5', 'C5', 'D5', 'E5', 'F5', 'G5', 'H5']\n",
+      "['A6', 'B6', 'C6', 'D6', 'E6', 'F6', 'G6', 'H6']\n",
+      "['A7', 'B7', 'C7', 'D7', 'E7', 'F7', 'G7', 'H7']\n",
+      "['A8', 'B8', 'C8', 'D8', 'E8', 'F8', 'G8', 'H8']\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters_numbers = [[chr(col) + str(row) for col in range (ord(\"A\"), ord(\"H\") +1)]\n",
+    "    for row in range(1, 9)]\n",
+    "\n",
+    "for row in letters_numbers: \n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2874c57b",
+   "metadata": {},
+   "source": [
+    "##### Chessboard using tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "34c45f62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('A', 1), ('B', 1), ('C', 1), ('D', 1), ('E', 1), ('F', 1), ('G', 1), ('H', 1))\n",
+      "(('A', 2), ('B', 2), ('C', 2), ('D', 2), ('E', 2), ('F', 2), ('G', 2), ('H', 2))\n",
+      "(('A', 3), ('B', 3), ('C', 3), ('D', 3), ('E', 3), ('F', 3), ('G', 3), ('H', 3))\n",
+      "(('A', 4), ('B', 4), ('C', 4), ('D', 4), ('E', 4), ('F', 4), ('G', 4), ('H', 4))\n",
+      "(('A', 5), ('B', 5), ('C', 5), ('D', 5), ('E', 5), ('F', 5), ('G', 5), ('H', 5))\n",
+      "(('A', 6), ('B', 6), ('C', 6), ('D', 6), ('E', 6), ('F', 6), ('G', 6), ('H', 6))\n",
+      "(('A', 7), ('B', 7), ('C', 7), ('D', 7), ('E', 7), ('F', 7), ('G', 7), ('H', 7))\n",
+      "(('A', 8), ('B', 8), ('C', 8), ('D', 8), ('E', 8), ('F', 8), ('G', 8), ('H', 8))\n"
+     ]
+    }
+   ],
+   "source": [
+    "chessboard = tuple(\n",
+    "    tuple((chr(col), row) for col in range(ord(\"A\"), ord(\"H\") +1))\n",
+    "    for row in range(1, 9)\n",
+    ")\n",
+    "\n",
+    "for row in chessboard:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a5d674",
+   "metadata": {},
+   "source": [
+    "### 4. Dice rolls"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3046ca30",
+   "id": "f957aa45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outcome (acending): [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6]\n",
+      "Number of 6's: 16\n",
+      "Number of 6's: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "\n",
+    "# generate a random dice roll outcome\n",
+    "dice_rolls = []\n",
+    "for i in range(100):\n",
+    "    roll = rnd.randint(1, 6)\n",
+    "    dice_rolls.append(roll)\n",
+    "\n",
+    "dice_rolls.sort()\n",
+    "print(\"Outcome (acending):\", dice_rolls)\n",
+    "\n",
+    "# Built in method called count(vaule)\n",
+    "count_sixes = dice_rolls.count(6)\n",
+    "print(\"Number of 6's:\", count_sixes)\n",
+    "\n",
+    "#loop \n",
+    "counting_sixes = sum(1 for x in dice_rolls if x == 6)\n",
+    "print(\"Number of 6's:\", counting_sixes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7be8753b",
    "metadata": {},
    "outputs": [],
    "source": []
