--- a/Exercise/exercise_3.ipynb
+++ b/Exercise/exercise_3.ipynb
@@ -627,8 +627,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "7be8753b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rolls: [10, 100, 1000, 10000, 1000000, 10000000]\n",
+      "Six counts: [1, 18, 160, 1681, 167195, 1666414]\n",
+      "Probabilities: [0.1, 0.18, 0.16, 0.1681, 0.167195, 0.1666414]\n",
+      "\n",
+      "Detailed results: \n",
+      "Rolls: 10       | Sixes: 1        | Probability: 0.100000\n",
+      "Rolls: 100      | Sixes: 18       | Probability: 0.180000\n",
+      "Rolls: 1000     | Sixes: 160      | Probability: 0.160000\n",
+      "Rolls: 10000    | Sixes: 1681     | Probability: 0.168100\n",
+      "Rolls: 1000000  | Sixes: 167195   | Probability: 0.167195\n",
+      "Rolls: 10000000 | Sixes: 1666414  | Probability: 0.166641\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b) dice rolls \n",
+    "\n",
+    "import random as rnd \n",
+    "\n",
+    "roll_counts = [10, 100, 1000, 10000, 1000000, 10000000]\n",
+    "\n",
+    "six_counts = []\n",
+    "probabilities = []\n",
+    "\n",
+    "for n in roll_counts:  \n",
+    "    dice_rolls = [rnd.randint(1, 6) for _ in range(n)]\n",
+    "    count_six = dice_rolls.count(6)\n",
+    "    probability = count_six / n\n",
+    "    \n",
+    "    six_counts.append(count_six)\n",
+    "    probabilities.append(probability)\n",
+    "\n",
+    "\n",
+    "print(\"Rolls:\", roll_counts)\n",
+    "print(\"Six counts:\", six_counts)\n",
+    "print(\"Probabilities:\", probabilities)\n",
+    "\n",
+    "print(\"\\nDetailed results: \")\n",
+    "for n, six, prob in zip(roll_counts, six_counts, probabilities):\n",
+    "    print(f\"Rolls: {n:<8} | Sixes: {six:<8} | Probability: {prob:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "576c8932",
    "metadata": {},
    "outputs": [],
    "source": []
